fixed bio full height on mobile

--- a/src/sass/_about.sass
+++ b/src/sass/_about.sass
@@ -9,7 +9,7 @@
     overflow: hidden
     transition: max-height .3s ease
     &.full
-      max-height: 1000px
+      max-height: 2000px
 
   .members
     max-height: 0
